app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-react
      version: v1
  template:
    metadata:
      labels:
        app: my-react
        version: v1
    spec:
      containers:
      - name: my-react
        image: httpd
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: my-react
spec:
  selector:
    app: my-react
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
